# Giga-Chatik

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  qodana.yaml
client/: .gitignore  (+6 more)
server/: Dockerfile  README.md  alembic.ini  pyproject.toml  tox.ini
server/config/: database.py  settings.py
server/config/cassandra/: __init__.py  base.py  cassandra.py
server/config/celery/: celery.py
server/config/database/: __init__.py  base.py  database.py  repository.py  utils.py
server/config/database/mixins/: __init__.py  base_repository_mixin.py
server/config/logger/: logger.py
server/config/mongo/: __init__.py  base.py  mongo.py  repository.py
server/config/mongo_conn/: mongo.py
server/config/redis/: __init__.py  redis.py
server/config/redis_conn/: redis_manager.py
server/config/sentry/: sentry.py
server/src/: main.py
server/src/migrations/: env.py
server/src/migrations/versions/: 2023_11_30_2040-38d3364ea91a_add_user_model.py  2023_12_16_2320-5ac803bba65e_create_server_models.py  2023_12_17_0040-ef8c3bf0527e_create_server_models.py  2023_12_23_2312-e2e11380bdba_add_server_and_user.py  2023_12_26_1530-a7375da748b7_fix_user_server_pk.py  2023_12_29_0941-41998371cb7e_unique_bu_user_id_and_server_id.py  2024_01_20_1801-5f20a0dfb4fb_add_server_description.py
server/src/modules/: router.py
server/src/modules/auth/: controllers.py  manager.py  models.py  settings.py
server/src/modules/auth/dto/: __init__.py  user.py
server/src/modules/auth/entity/: user.py  user_entity.py
server/src/modules/auth/models/: user.py  user_profile.py
server/src/modules/auth/services/: __init__.py  services.py
server/src/modules/auth/utils/: __init__.py  websocket_auth.py
server/src/modules/chat/: controllers.py  manager.py
server/src/modules/communication/: controllers.py  manager.py
server/src/modules/communication/dto/: message_dto.py
server/src/modules/communication/managers/: __init__.py  connection_manager.py  pull_manager.py  websocket_pull_manager.py
server/src/modules/communication/services/: __init__.py  message_store_service.py  message_to_client_service.py  send_messages_on_connect_service.py  verify_ws_connection_service.py
server/src/modules/core/: BaseRepository.py  IException.py  IRepository.py
server/src/modules/redis/: __init__.py  redis_manager.py
server/src/modules/server/: controllers.py
server/src/utils/: hasher.py
(+103 files in other folders)
