[tool.poetry]
name = "4atik"
version = "0.1.0"
description = ""
authors = ["nnnLik <rslmakhmudov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
pydantic-settings = "2.1.0"
pydantic = "2.5.3"
fastapi = "0.104.1"
uvicorn = "0.24.0.post1"
sqlalchemy = "2.0.23"
alembic = "1.12.1"
psycopg2-binary = "2.9.9"
asyncpg = "0.29.0"
fastapi-users = { extras = ["sqlalchemy"], version = "12.1.2" }
bcrypt = "4.0.1"
websockets = "12.0"
motor = "3.3.2"
redis = {extras = ["hiredis"], version = "5.0.1"}
mongoengine = "^0.27.0"
sentry-sdk = "^1.39.1"

[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
black = "23.11.0"
ruff = "0.1.9"
isort = "5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F821", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "__init__.py",
    ".venv",
    ".env",
    "migrations/env.py",
]

[tool.isort]
profile = "black"